# wiringmatters

./: README.md  index.html  pyproject.toml
experiments/: __init__.py  run_celegans.py
notebooks/: 01_connectome_exploration.ipynb  02_masks_and_models.ipynb  03_benchmark_results.ipynb
results/: celegans_benchmark_reference.json  masks_20260415_213458.npz
tests/: test_loaders.py  test_models.py  test_topology.py
wiringmatters/: __init__.py
wiringmatters/loaders/: __init__.py  celegans.py  drosophila.py
wiringmatters/models/: __init__.py  layers.py  networks.py
wiringmatters/topology/: __init__.py  analysis.py  masks.py  utils.py
