[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiringmatters"
version = "0.1.0"
description = "Biologically-constrained neural networks via real connectome topology"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Maxence Arella", email = "maxencearella@gmail.com" }]
keywords = [
    "connectome",
    "neuroscience",
    "deep-learning",
    "sparse-networks",
    "biological-neural-networks",
    "c-elegans",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "requests>=2.28",
    "tqdm>=4.65",
    "python-louvain>=0.16",  # community detection for modularity
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "umap-learn>=0.5",
]

[project.urls]
Homepage = "https://github.com/maxencearella/wiringmatters"
Repository = "https://github.com/maxencearella/wiringmatters"
Issues = "https://github.com/maxencearella/wiringmatters/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wiringmatters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
